--- a/924-SpaceShooter/924-SpaceShooter.vcxproj.filters
+++ b/924-SpaceShooter/924-SpaceShooter.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Game.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="projectile_manager.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Projectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Game.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="projectile_manager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
