--- a/924-SpaceShooter/924-SpaceShooter.vcxproj
+++ b/924-SpaceShooter/924-SpaceShooter.vcxproj
@@ -127,15 +127,23 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="asteroid.cc" />
+    <ClCompile Include="asteroid_manager.cc" />
+    <ClCompile Include="entity.cc" />
     <ClCompile Include="main.cc" />
     <ClCompile Include="game.cc" />
     <ClCompile Include="projectile.cc" />
     <ClCompile Include="projectile_manager.cc" />
+    <ClCompile Include="starship.cc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="asteroid.h" />
+    <ClInclude Include="asteroid_manager.h" />
+    <ClInclude Include="entity.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="projectile.h" />
     <ClInclude Include="projectile_manager.h" />
+    <ClInclude Include="starship.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
