--- a/924-SpaceShooter/924-SpaceShooter.vcxproj
+++ b/924-SpaceShooter/924-SpaceShooter.vcxproj
@@ -131,6 +131,8 @@
   <ItemGroup>
     <ClCompile Include="asteroid.cc" />
     <ClCompile Include="asteroid_manager.cc" />
+    <ClCompile Include="enemy.cc" />
+    <ClCompile Include="enemy_manager.cc" />
     <ClCompile Include="entity.cc" />
     <ClCompile Include="main.cc" />
     <ClCompile Include="game.cc" />
@@ -141,6 +143,8 @@
   <ItemGroup>
     <ClInclude Include="asteroid.h" />
     <ClInclude Include="asteroid_manager.h" />
+    <ClInclude Include="enemy.h" />
+    <ClInclude Include="enemy_manager.h" />
     <ClInclude Include="entity.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="projectile.h" />
